--- a/src/components/Tasks/Task.module.css
+++ b/src/components/Tasks/Task.module.css
@@ -5,7 +5,7 @@
   background-color: white;
   border-radius: 4px;
   cursor: pointer;
-  margin-top: 8px;
+  margin-top: 13px;
   text-align: left;
   font-size: 16px;
   box-sizing: border-box;
@@ -34,14 +34,16 @@
   margin-right: 10px !important;
   border-radius: 50%;
   min-width: 0 !important;
-  padding: 6px 0;
+  padding: 0;
   min-width: 0;
-  width: 34px;
+  width: 35px;
+  height: 35px;
 }
 
 .task_left_done_icon {
-  width: 22px;
-  height: 22px;
+  width: 30px;
+  height: 30px;
+  color: rgb(223, 223, 223);
 }
 
 .task_right_pomo_cur {
@@ -67,4 +69,14 @@
   min-width: 0 !important;
   color: rgb(187, 187, 187) !important;
   border: 1px solid #eee !important;
+}
+
+.task_title {
+  color: rgb(85, 85, 85);
+  font-weight: bold;
+  width: 85%;
+  overflow: hidden;
+  -webkit-box-align: center;
+  align-items: center;
+  line-height: 1.5em;
 }
