add in detail design of form

--- a/src/components/Tasks/Task.module.css
+++ b/src/components/Tasks/Task.module.css
@@ -75,6 +75,7 @@
   color: rgb(85, 85, 85);
   font-weight: bold;
   width: 85%;
+  font-size: 18px;
   overflow: hidden;
   -webkit-box-align: center;
   align-items: center;
