--- a/src/components/Tasks/AddTask.module.css
+++ b/src/components/Tasks/AddTask.module.css
@@ -1,23 +1,22 @@
 /** @format */
 
 .button {
-  color: white;
+  color: white !important;
   width: 100%;
-  height: 60px;
-  background-color: rgba(0, 0, 0, 0.1);
+  height: 70px;
+  background-color: rgba(0, 0, 0, 0.1) !important;
   border-radius: 8px;
   display: flex;
-  -webkit-box-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
   align-items: center;
   cursor: pointer;
-  opacity: 0.8;
-  margin-top: 12px;
-  border: 2px dashed rgba(255, 255, 255, 0.4);
+  opacity: 0.8 !important;
+  margin-top: 13px !important;
+  font-size: 18px !important;
+  border: 2px dashed rgba(255, 255, 255, 0.4) !important;
 }
 
 .button_text {
   opacity: 0.8;
-  font-weight: bold;
+  text-transform: capitalize !important;
+  font-weight: bold !important;
 }
