progress line working

--- a/src/components/Pomodoros/PomodoroTopBarButton.module.css
+++ b/src/components/Pomodoros/PomodoroTopBarButton.module.css
@@ -4,6 +4,6 @@
 }
 
 .active {
-  background: none rgba(0, 0, 0, 0.15);
-  font-weight: bold;
+  background: none rgba(0, 0, 0, 0.15) !important;
+  font-weight: bold !important;
 }
