--- a/src/components/Pomodoros/Pomodoro.module.css
+++ b/src/components/Pomodoros/Pomodoro.module.css
@@ -1,6 +1,39 @@
 /** @format */
+.card {
+  margin: 60px 70px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  max-width: 1000px !important;
+  border-radius: 10px !important;
+}
+
+.card_action {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  position: relative;
+}
+
+.stack {
+  display: flex;
+  justify-content: center;
+}
+
 .timer {
   font-size: 120px !important;
   font-weight: bold !important;
   margin-top: 20px !important;
+  text-align: center;
+  color: white;
+  font-family: "Nunito" !important;
+}
+
+.icon {
+  cursor: pointer;
+  position: absolute;
+  right: 150px;
+  width: 55px !important;
+  height: 55px !important;
+  color: white;
 }
