--- a/src/components/UIs/DarkLightModeButton.module.css
+++ b/src/components/UIs/DarkLightModeButton.module.css
@@ -1,8 +1,8 @@
 /** @format */
 
 .darkModeButton {
-  background: none;
   border: none;
+  background: none;
   opacity: 0.7;
   position: relative;
   border-top-left-radius: 5px;
@@ -14,6 +14,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+}
+
+.darkModeButton:hover {
+  opacity: 1;
 }
 
 .DarkModeToggle__MoonOrSun {
