--- a/src/components/Pomodoros/PomodoroActionButton.module.css
+++ b/src/components/Pomodoros/PomodoroActionButton.module.css
@@ -5,11 +5,33 @@
   border: none;
   margin: 0px 0px;
   padding: 0px 12px;
-  border-radius: 4px;
   font-size: 22px;
   height: 55px;
   color: rgb(219, 82, 77);
   font-weight: bold;
   width: 200px;
   background-color: white;
+  transition: all 0.1s ease-in-out;
+  border-radius: 6px;
+  border-bottom: 5px solid hsl(241, 3%, 73%);
+  border-top: 0px;
+}
+
+.button_start {
+  cursor: pointer;
+  border: none;
+  margin: 0px 0px;
+  padding: 0px 12px;
+  font-size: 22px;
+  height: 55px;
+  color: rgb(219, 82, 77);
+  font-weight: bold;
+  width: 200px;
+  background-color: white;
+  transition: all 0.1s ease-in-out;
+  border-radius: 6px;
+  border-bottom: 5px solid hsl(241, 3%, 73%);
+  border-top: 0px;
+  border-bottom-width: 0;
+  border-top-width: 5px;
 }
