--- a/src/components/Tasks/Task.module.css
+++ b/src/components/Tasks/Task.module.css
@@ -83,7 +83,9 @@
 .task_left_done_icon_done {
   width: 32px !important;
   height: 32px !important;
-  color: rgb(215, 75, 71);
+  color: rgb(189, 147, 249);
+  /* rgb(189,147,249) dark
+  rgb(215, 75, 71) light */
 }
 
 .task_right {
