--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,20 @@
 /** @format */
 body {
-  background: url("./assets/background.jpg") no-repeat center center fixed;
-  min-width: 100%;
-  min-height: 100%;
+  height: 100%;
   /* color: white; */
   color: rgb(189, 147, 249);
   padding-bottom: 12px;
   box-sizing: border-box;
+  margin: 0;
+}
+
+.bg {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background-image: url("./assets/background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
