--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   width: 100%;
   position: fixed;
   top: 0;
-  background-image: url("./assets/background.jpg");
+  background-image: url("./assets/background/dark_default.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
