--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 /** @format */
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
