--- a/src/components/Layouts/Header.module.css
+++ b/src/components/Layouts/Header.module.css
@@ -16,3 +16,11 @@
   font-weight: bold;
   font-size: 24px;
 }
+
+.header_logo_icon {
+  position: absolute;
+  scale: 0.4;
+  display: block;
+  top: -105px;
+  left: -20px;
+}
