--- a/src/components/Layouts/Header/Header.module.css
+++ b/src/components/Layouts/Header/Header.module.css
@@ -7,8 +7,8 @@
   align-items: center;
   z-index: 100;
   top: 0;
-  left: 20px;
-  right: 20px;
+  left: 0;
+  right: 0;
 }
 
 .header_logo {
@@ -21,6 +21,6 @@
   position: absolute;
   scale: 0.4;
   display: block;
-  top: -105px;
-  left: -20px;
+  top: -85px;
+  left: 10px;
 }
