fix start button color and add new design for darkmode button

--- a/src/components/Layouts/Header/Header.module.css
+++ b/src/components/Layouts/Header/Header.module.css
@@ -1,7 +1,7 @@
 /** @format */
 
 .header_container {
-  position: fixed;
+  position: absolute;
   display: flex;
   justify-content: space-between;
   align-items: center;
