--- a/src/pages/Auth/Login/Login.module.css
+++ b/src/pages/Auth/Login/Login.module.css
@@ -55,3 +55,63 @@ textarea:focus,
 input:focus {
   outline: none;
 }
+
+.forgot_wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.forgot_button {
+  color: white;
+  font-weight: bold;
+  letter-spacing: 0.02em;
+  text-decoration-line: underline;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  cursor: pointer;
+  opacity: 0.9;
+  font-size: 14px;
+  background-image: none;
+}
+
+.signup_wrapper {
+  margin-top: 24px;
+  font-size: 16px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.signup_text {
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 8px;
+}
+
+.signup_button {
+  color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  cursor: pointer;
+  opacity: 0.9;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0.02em;
+  text-decoration-line: underline;
+  text-decoration-style: initial;
+  text-decoration-color: initial;
+  text-decoration: underline;
+}
