--- a/src/components/Layouts/Header/Header.module.css
+++ b/src/components/Layouts/Header/Header.module.css
@@ -16,13 +16,14 @@
   font-weight: bold;
   font-size: 24px;
   text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header_logo_icon {
-  height: 100px;
-  width: 100px;
-  position: absolute;
+  height: 40px;
+  width: 40px;
   display: block;
-  top: -10px;
-  left: 90px;
+  margin-left: 10px;
 }
