preload image before load app

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,10 +5,10 @@ body {
   padding: 0;
 }
 
-body::after {
+/* body::after {
   position:absolute; width:0; height:0; overflow:hidden; z-index:-1; 
   content:url(./assets/background/dark_default.jpeg) url(./assets/background/light_default.jpeg);  
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
